# Semi-PAR

./: .gitignore  README.md  annotation.py  experiment.sh  fixmatch.py  fixmatch_new.py  fixmatch_solider.py  generate_and_adjust.py  get_pseudo_label.py  hyper_tuning.py  imbalance_sfda.py  inference.py  inference_solider.py
mlops/annotation_app/: .env  .gcloudignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
mlops/annotation_app/cloudbuild/: Dockerfile  cloudbuild.sh  cloudbuild.yaml
mlops/annotation_app/src/: app.yaml  main.py
mlops/annotation_app/src/templates/: index.html  select_attributes.html
mlops/annotation_app/templates/: annotate.html
model/: inception_iccv.py  inception_iccv_new.py
model/solider/: base_block.py  model_factory.py  solider.py
model/solider/backbone/: resnet.py  swin_transformer.py
model/solider/config/configs/: pa100k.yaml  pa100k_age.yaml  peta_zs.yaml
utils/: datasets.py  sampler.py
